[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra_mega_sis"
version = "0.1.0"
description = "A private Python package."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "sqlalchemy==2.0.15",
    "flask==2.3.2",
    "jinja2==3.1.2",
    "python-dotenv==0.19.2"
]

[project.optional-dependencies]
dev = [
    "pylint==2.17.5",
    "isort==5.12.0",
    "black==23.3.0",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 100